--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,27 +1,43 @@
-<h1>NOSSOS EMPREGADOS</h1>
-<table>
-<thead>
-    <th>Nome</th>
-    <th>Salario</th>
-    <th>Bonus</th>
-</thead>
-<tbody>
+<div class="container">
+    <alert-success [hidden]="!showMessageSuccess"> 
+        O empregado <strong> {{employee?.name}} </strong> foi cadastrado com sucesso!
+    </alert-success>    
+    <div class="row">
+        <h1>NOSSOS EMPREGADOS</h1>
+        <table class="table table-striped">
+            <thead>
+                    <tr>
+                         <td colspan="3">
+                             <button class="btn btn-primary" (click)="openNewModal()">Novo Empregado</button>
+                         </td>
+                    </tr>
+                <tr>
+                    <th>Nome</th>
+                    <th>Salario</th>
+                    <th>Bonus</th>
+                    <th>Ações</th>
+                </tr>
+            </thead>
+            <tbody>
 
-    <!--let i=index;" [id]="'tr'+i gera o id automatico   index variavel que ja existe do for -->
-    <tr *ngFor="let employee of employeesService.employees;let i=index;" [id]="'tr'+i">
-        <!--quando usado null o angula não aplica o css-->
-    <td [style.color]="employee.salary > 1000 ? 'yellow' : null" >{{employee.name}}</td>
-    <!-- css reativo direto no HTML-->
-    <td [style.color]="employee.salary > 1000 ? 'green' : 'blue'">{{employee.salary}}</td>
-    <td >{{employee.bonus}}</td>
-    <!--usando innerHtml  acessa diretamente o DOM-->
-<!--[ngClass]="{'salary-expansive': employee.salary > 1000 } (salary-expansive =  e uma classe css) -->
-  <!--   usado para aplicar diretamente uma classe css quando passa pela condição -->
-    <td [innerHtml]="employee.name" [ngClass]="{'salary-expensive': employee.salary > 1000 , 
-            'salary-cheap': employee.salary <= 1000 }"></td>
-    <td [style.color]="getSalaryColor(employee)" [innerHtml]="employee.salary"></td>
-    <td [innerHtml]="employee.bonus"></td>
-    
-</tr>
-</tbody>
-</table>
+                <!--let i=index;" [id]="'tr'+i gera o id automatico   index variavel que ja existe do for -->
+                <tr *ngFor="let employee of employeesService.employees;let i=index;" [id]="'tr'+i">
+                    <!--quando usado null o angula não aplica o css-->
+                    <td [innerHtml]="employee.name"></td>
+                    <td [innerHtml]="employee.salary | myCurrency" [SalaryColor]="employee.salary "></td>
+                    <td>{{employee.bonus}}</td>
+                    <td >
+                        <a href="javascript:void(0)" (click)="openEditModal(employee)">Editar</a> |
+                        <a href="javascript:void(0)" (click)="openDeleteModal(employee)">Destruir</a>
+                    </td>
+
+                    <!-- modo de chamar a diretiva caso não use o nome da variavel igual ao nome da diretiva -->
+                    <!--  <td [innerHtml]="employee.salary" SalaryColor teste ="{{ employee.salary }}"></td>  -->
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+<employee-new-modal (onSubmit)="onNewEmployee($event)"></employee-new-modal>
+<employee-edit-modal [employee]="employeeToEdit" (onSubmit)="onEditEmployee($event)"></employee-edit-modal>
+<employee-delete-modal [employee]="employeeToDelete" (onDestroy)="onDestroyEmployee($event)"></employee-delete-modal>
